# TalkSync

./: .gitignore  .gitmodules  CMakeLists.txt
db/: mydatabase.db
include/Http/: EchoClient.h  EchoServer.h  HttpServer.h  HttpStruct.h
include/Login/: LoginImpl.h  LoginInterface.h
src/Http/: EchoClient.cpp  EchoServer.cpp  HttpServer.cpp
src/Login/: LoginImp.cpp
test/: Test_Client.cpp  Test_Server.cpp  main.cpp
test/Mock/: Client.cpp
test/include/: Client.h  ClientInterface.h
